# ARC_2026

./: .gitignore  README.md  README_XAVIER.md  control_gui_system.py  multi_transmitter.py  package.xml  receiver_gui.py  requirements.txt  setup.cfg  setup.py  wheel_arm_gui.py  working_gui.py
Arm/: README.md  arm_controller.ino  arm_receiver.py
Camera/: README.md  camera_receiver.py  camera_transmitter.py  ip_camera.py  run_receiver_camera.sh  run_transmitter_camera.sh  scan.py  test_reciever.py  test_transmitter.py
GUI/: arm_with_laser.py  misc_gui.py  science_gui.py  unified_gui.py  working_gui.py  working_gui_bldc.py  working_gui_v2.py
Misc/: misc_controller.ino  misc_receiver.py  read.txt
Rocket/: README.md
Science/: esp_serial_tool.py  load_cell.ino  moisture_sensor.ino  probe.ino  read.txt  science_receiver.py  science_unified.ino  servo.ino  servo_dual_control.ino  switch.ino  test.py  test_science_board.ino
Utility/: autorun_services.txt  common_stereo.yaml  ping_base.py  ping_rover.py  udev.txt
Wheel/: README.md  odrive_transmitter.py  wheel_receiver.py
config/: cyclonedds_base.xml  cyclonedds_rover.xml
docker/: Dockerfile  run.txt
interplanetar_rover/: arm_bridge_node.py  camera_receiver_node.py  gui_node.py  (+3 more)
ros2_ws/src/interplanetar_rover/: CMakeLists.txt  package.xml  setup.py
ros2_ws/src/interplanetar_rover/config/: cyclonedds.xml
ros2_ws/src/interplanetar_rover/interplanetar_rover/: __init__.py
ros2_ws/src/interplanetar_rover/launch/: base.launch.py  rover.launch.py
ros2_ws/src/interplanetar_rover/msg/: ArmCommand.msg
(+74 files in other folders)
